--- a/src/main/resources/templates/blog.mustache
+++ b/src/main/resources/templates/blog.mustache
@@ -4,6 +4,7 @@
 <div class="articles">
 
   {{#articles}}
+    {{#banner.title}}
     <section>
       <header class="article-header">
         <h2 class="article-title"><a href="/article/{{slug}}">{{title}}</a></h2>
@@ -13,6 +14,7 @@
         {{headline}}
       </div>
     </section>
+    {{/banner.title}}
   {{/articles}}
 
 </div>
